# rust-vcprompt

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE.md  README.md
src/: git.rs  hg.rs  main.rs  util.rs
