[package]
name = "vcprompt"
version = "1.0.0"
authors = ["Stefan Scherfke <stefan@sofa-rockers.org>"]
description = "Version control information in your shell prompt"
documentation = "https://github.com/sscherfke/rust-vcprompt/blob/master/README.md"
homepage = "https://github.com/sscherfke/rust-vcprompt"
repository = "https://github.com/sscherfke/rust-vcprompt"
keywords = ["prompt", "bash", "zsh", "git", "hg"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "BSD-3-Clause"
